fiddle with the alignment a little

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -191,9 +191,9 @@ body {
 }
 
 /* Link colors */
-footer a,         .content a         { color: #66f; }
-footer a:active,  .content a:active  { color: #f66; }
-footer a:visited, .content a:visited { color: #a6f; }
+.content a         { color: #66f; }
+.content a:active  { color: #f66; }
+.content a:visited { color: #a6f; }
 
 /*
  * -- TABLET (AND UP) MEDIA QUERIES --
