--- a/themes/fodt/layouts/partials/footer.html
+++ b/themes/fodt/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="content">
   <p>
     &copy; 2020 Friends of DramaTech<br>
     The content of this site is made available under a <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons BY-NC-SA 4.0 license</a>.
