--- a/themes/lilac-revenge/assets/scss/lilac/theme.scss
+++ b/themes/lilac-revenge/assets/scss/lilac/theme.scss
@@ -18,7 +18,8 @@ $old-gold: #CFB53B;
 $black: #000000;
 
 // Misc Variables
-$nav-size-break: 850px;
+$nav-size-medium: 560px;
+$nav-size-large: 860px;
 
 
 /* ==========================================================================
@@ -312,7 +313,7 @@ header {
 }
 
 .large-button{
-  font-size: 42px;
+  font-size: 28px;
   margin: 21px;
   padding: 10px;
   border-radius: 10px;
@@ -443,7 +444,56 @@ footer {
    ========================================================================== */
 
 /* Style adjustments for viewports that meet the condition */
-@media only screen and (min-width: $nav-size-break){
+@media only screen and (min-width: $nav-size-medium){
+  header {
+    height: 80px;
+  }
+
+  #logo {
+    width : 334px;
+    height : 80px;
+  }
+
+   .menu-toggle-btn{
+    display: none !important;
+  }
+
+  .navigation-menu{
+    all: unset;
+    float: right;
+    display: flex;
+    align-items: flex-end;
+    height: 100%;
+  }
+
+  .navigation-menu::before{
+    display: none;
+  }
+
+  .navigation-menu a{
+    margin-left: 10px;
+    display: inline;
+    color: $navy;
+  }
+
+  .navigation-menu a:hover{
+    background: $lilac;
+    color: $ghost-white;
+    transform: scale(1.1);
+  }
+
+  .large-button{
+    font-size: 42px;
+    margin: 21px;
+    padding: 10px;
+    border-radius: 10px;
+    text-decoration: none;
+    background: $lilac;
+    color: $ghost-white;
+  }
+}
+
+@media only screen and (min-width: $nav-size-large){
   header {
     height: 100px;
   }
