--- a/themes/lilac-revenge/assets/scss/lilac/theme.scss
+++ b/themes/lilac-revenge/assets/scss/lilac/theme.scss
@@ -263,8 +263,8 @@ header {
 .navigation-menu{
   position: fixed;
   width: 100%;
-  //max-width: 400px;
-  background: $navy;
+  max-width: 400px;
+  background: $lilac;
   top: 90px;
   right: 0;
   display: none;
@@ -276,7 +276,7 @@ header {
   content: "";
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-bottom: 10px solid #172b4d;
+  border-bottom: 10px solid $lilac;
   position: absolute;
   top: -10px;
   right: 10px;
