Remove homepage buttons
* Tweak nav colors to replace the large buttons

--- a/themes/lilac-revenge/layouts/partials/header.html
+++ b/themes/lilac-revenge/layouts/partials/header.html
@@ -4,8 +4,8 @@
     {{end}}
   <i class="menu-toggle-btn fas fa-bars"></i>
   <nav class="navigation-menu">
-    <a href="/about/"><i class="fas fa-home about"></i>About</a>
-    <a href="/donate/"><i class="fas fa-gifts donate"></i>Donate</a>
-    <a href="/join/"><i class="fas fa-check join"></i>Join</a>
+    <a class="about" href="/about/"><i class="fas fa-home"></i>About</a>
+    <a class="donate" href="/donate/"><i class="fas fa-gifts donate"></i>Donate</a>
+    <a class="join" href="/join/"><i class="fas fa-check join"></i>Join</a>
   </nav>
 </header>
