--- a/themes/lilac-revenge/layouts/_default/baseof.html
+++ b/themes/lilac-revenge/layouts/_default/baseof.html
@@ -2,10 +2,10 @@
 <html>
     {{- partial "head.html" . -}}
     <body>
-        <section id="content">    
-            {{- partial "header.html" . -}}
-            {{- block "main" . }}{{- end }} 
-        </section>
+        {{- partial "header.html" . -}}
+        <main>
+            {{- block "main" . }}{{- end }}
+        </main>
         {{- partial "footer.html" . -}}
         {{- partial "script.html" . -}}
     </body>
