--- a/themes/lilac-revenge/layouts/partials/footer.html
+++ b/themes/lilac-revenge/layouts/partials/footer.html
@@ -1,5 +1,8 @@
 <footer class="flex-box">
-<span id="license" class="flex-align-center">
-  <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International license</a>.
-</span>
+    <span id="license" class="flex-align-center">
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+            <i class="fab fa-creative-commons"></i><i class="fab fa-creative-commons-by"></i><i class="fab fa-creative-commons-nc"></i><i class="fab fa-creative-commons-sa"></i>
+        </a>
+        <p class="sr-only"/> Licensed under Creative Commons By Attribution, Non-Commercial, Share-Alike
+    </span>
 </footer>
