--- a/themes/lilac-revenge/layouts/partials/header.html
+++ b/themes/lilac-revenge/layouts/partials/header.html
@@ -2,10 +2,10 @@
     {{ if not .IsHome }}
     <div id="logo"><a href="/">Friends Of DramaTech</a></div>
     {{end}}
-  <i class="menu-toggle-btn fas fa-bars"></i>
-  <nav class="navigation-menu">
-    <a class="about" href="/about/"><i class="fas fa-home"></i>About</a>
-    <a class="donate" href="/donate/"><i class="fas fa-gifts donate"></i>Donate</a>
-    <a class="join" href="/join/"><i class="fas fa-check join"></i>Join</a>
-  </nav>
+    <i class="menu-toggle-btn fas fa-bars"></i>
+    <nav class="navigation-menu">
+        <a class="about" href="/about/"><i class="fas fa-home"></i>About</a>
+        <a class="donate" href="/donate/"><i class="fas fa-gifts"></i>Donate</a>
+        <a class="join" href="/join/"><i class="fas fa-check"></i>Join</a>
+    </nav>
 </header>
