Fix a few Lighthouse and WCAG bugs

--- a/themes/lilac-revenge/layouts/index.html
+++ b/themes/lilac-revenge/layouts/index.html
@@ -1,4 +1,4 @@
 {{ define "main" }}
-    <img src="/img/logo.png" style="width:100%;"/>
+    <img src="/img/logo.png" alt="Friends of DramaTech Logo" style="width:100%;"/>
     {{ .Content }}
 {{ end }}
