--- a/themes/lilac-revenge/layouts/partials/header.html
+++ b/themes/lilac-revenge/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header>
     {{ if not .IsHome }}
-    <div id="logo"><a href="/">Friends Of DramaTech</a></div>
+    <div id="logo"><a href="/">Friends Of DramaTech Home Page</a></div>
     {{end}}
     <i class="menu-toggle-btn fas fa-bars"></i>
     <nav class="navigation-menu">
