--- a/themes/lilac-revenge/layouts/partials/footer.html
+++ b/themes/lilac-revenge/layouts/partials/footer.html
@@ -2,7 +2,7 @@
     <span id="license" class="flex-align-center">
         <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
             <i class="fab fa-creative-commons"></i><i class="fab fa-creative-commons-by"></i><i class="fab fa-creative-commons-nc"></i><i class="fab fa-creative-commons-sa"></i>
+            <p class="sr-only"> Licensed under Creative Commons By Attribution, Non-Commercial, Share-Alike</p>
         </a>
-        <p class="sr-only"/> Licensed under Creative Commons By Attribution, Non-Commercial, Share-Alike
     </span>
 </footer>
