--- a/themes/lilac-revenge/layouts/partials/head.html
+++ b/themes/lilac-revenge/layouts/partials/head.html
@@ -11,4 +11,4 @@
 {{ hugo.Generator }}
 
 {{ $style := resources.Get "scss/lilac/theme.scss" | resources.ToCSS (dict "outputStyle" "compressed") | resources.Fingerprint "sha512" }}
-<link rel="stylesheet" content-type="text/css" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
+<link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
