--- a/themes/lilac-revenge/layouts/partials/footer.html
+++ b/themes/lilac-revenge/layouts/partials/footer.html
@@ -1,8 +1,7 @@
 <footer class="flex-box">
     <span id="license" class="flex-align-center">
-        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" title="Licensed under Creative Commons By Attribution, Non-Commercial, Share-Alike">
             <i class="fab fa-creative-commons"></i><i class="fab fa-creative-commons-by"></i><i class="fab fa-creative-commons-nc"></i><i class="fab fa-creative-commons-sa"></i>
-            <p class="sr-only"> Licensed under Creative Commons By Attribution, Non-Commercial, Share-Alike</p>
         </a>
     </span>
 </footer>
