Generate top nav from front matter.

--- a/themes/lilac-revenge/layouts/partials/header.html
+++ b/themes/lilac-revenge/layouts/partials/header.html
@@ -1,11 +1,11 @@
 <header>
     {{ if not .IsHome }}
-    <div id="logo"><a href="/">Friends Of DramaTech Home Page</a></div>
+        <div id="logo"><a href="{{ "/" | relURL }}">Friends Of DramaTech Home Page</a></div>
     {{end}}
     <i class="menu-toggle-btn fas fa-bars"></i>
     <nav class="navigation-menu">
-        <a class="about" href="/about/"><i class="fas fa-home"></i>About</a>
-        <a class="donate" href="/donate/"><i class="fas fa-gifts"></i>Donate</a>
-        <a class="join" href="/join/"><i class="fas fa-check"></i>Join</a>
+        {{ range .Site.Menus.main }}
+            <a class="{{ .Name }}" href="{{ .URL }}"><i class="{{ .Pre }}" aria-hidden="true"></i>{{ .Name }}</a>
+        {{ end }}
     </nav>
 </header>
