Fix crazy image widths

--- a/themes/lilac-revenge/assets/scss/lilac/theme.scss
+++ b/themes/lilac-revenge/assets/scss/lilac/theme.scss
@@ -414,6 +414,12 @@ footer {
     height: 80px;
   }
 
+  img {
+    max-width: 100%;
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+
   #logo {
     width : 384px;
     height : 80px;
