(fix) Update content for 75th

--- a/themes/lilac-revenge/assets/scss/lilac/theme.scss
+++ b/themes/lilac-revenge/assets/scss/lilac/theme.scss
@@ -285,7 +285,7 @@ header {
 
 .large-button{
   font-size: 28px;
-  margin: 21px;
+  margin: 0;
   padding: 10px;
   border-radius: 10px;
   text-decoration: none;
@@ -450,7 +450,7 @@ footer {
 
   .large-button{
     font-size: 42px;
-    margin: 21px;
+    margin: 0;
     padding: 10px;
     border-radius: 10px;
     text-decoration: none;
