--- a/themes/lilac-revenge/assets/scss/lilac/theme.scss
+++ b/themes/lilac-revenge/assets/scss/lilac/theme.scss
@@ -285,7 +285,7 @@ header {
 
 .large-button{
   font-size: 28px;
-  margin: 21px;
+  margin: 0;
   padding: 10px;
   border-radius: 10px;
   text-decoration: none;
@@ -414,12 +414,6 @@ footer {
     height: 80px;
   }
 
-  img {
-    max-width: 100%;
-    margin-top: 1em;
-    margin-bottom: 1em;
-  }
-
   #logo {
     width : 384px;
     height : 80px;
@@ -456,7 +450,7 @@ footer {
 
   .large-button{
     font-size: 42px;
-    margin: 21px;
+    margin: 0;
     padding: 10px;
     border-radius: 10px;
     text-decoration: none;
